<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>calibration_node</name>
  <version>0.1.0</version>
  <description>Transforms detected crop positions using a hand-eye calibration matrix.</description>
  <maintainer email="wjddnrud4487@naver.com">jwg</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
